Mon Jun  1 22:01:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (pkg_config): split --libs if --libs-only-l option
	  is not available.  patch in [ruby-core:69428] by Hans Mackowiak.
	  [ruby-core:69421] [Bug #11201]

Mon Jun  1 21:18:24 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_children): remove a garbage character
	  introduced at the last commit.

Mon Jun  1 19:24:42 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (rb_method_entry_make): do not show warning message
	  when method_entry is an alias.

Mon Jun  1 15:47:16 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h: move class related definitions.

Mon Jun  1 15:43:03 2015  Koichi Sasada  <ko1@atdot.net>

	* class.c: remove needless include pragma for method.h.

	* struct.c: ditto.

	* vm_method.c: ditto.

Mon Jun  1 05:42:00 2015  Koichi Sasada  <ko1@atdot.net>

	* eval_intern.h, vm_method.c: move macros to functions.
	  * SCOPE_TEST(f)  -> rb_frame_visibility_test(flag).
	  * SCOPE_CHECK(f) -> rb_frame_visibility_check(flag).
	  * SCOPE_SET(f)   -> rb_frame_visibility_set(flag).

	* load.c (load_ext): use it.

Mon Jun  1 04:47:37 2015  Zachary Scott  <e@zzak.io>

	* ext/date/date_core.c: [DOC] Add comparison of Time and DateTime
	  Patch provided by @pixeltrix

Mon Jun  1 04:22:09 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h (VM_FRAME_MAGIC_DUMMY): introduce new frame type to
	  recognize dummy frame.

	* vm.c (th_init): use new frame type.

	* vm_args.c (raise_argument_error): ditto.

Mon Jun  1 04:15:42 2015  Koichi Sasada  <ko1@atdot.net>

	* class.c (rb_class_has_methods): added to reduce dependency
	  to internal class data structure.

	* internal.h: ditto.

	* hash.c (has_extra_methods): use added function.

Mon Jun  1 04:11:48 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c , gc.h (rb_obj_info): export obj_info(VALUE) for debugging.

Mon Jun  1 03:52:55 2015  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb: increase timeout seconds for GC stressful